--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,62 +7,65 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/lamp_image"
-        android:layout_width="41dp"
-        android:layout_height="41dp"
+        android:id="@+id/imgLamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/ticket_number_editText"
+        android:contentDescription="@string/imgDescriptionLamp"
+        app:layout_constraintBottom_toTopOf="@+id/etTicketNumber"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ticket_image"
+        app:layout_constraintTop_toBottomOf="@+id/imgTicket"
         app:srcCompat="@drawable/gray_lamp_image" />
 
     <ImageView
-        android:id="@+id/ticket_image"
-        android:layout_width="299dp"
-        android:layout_height="159dp"
+        android:id="@+id/imgTicket"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/lamp_image"
+        android:contentDescription="@string/imgDescriptionTicket"
+        app:layout_constraintBottom_toTopOf="@+id/imgLamp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ticket_image" />
 
     <EditText
-        android:id="@+id/ticket_number_editText"
+        android:id="@+id/etTicketNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="8dp"
+        android:autofillHints=""
         android:ems="10"
-        android:hint="@string/hint_editText"
+        android:hint="@string/hintForETCheckNumber"
         android:inputType="number"
-        android:maxLength="6"
+        android:maxLength="@integer/MAX_NUMBER_OF_DIGITS"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lamp_image" />
+        app:layout_constraintTop_toBottomOf="@+id/imgLamp" />
 
     <Button
-        android:id="@+id/check_button"
+        android:id="@+id/btnCheckNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
-        android:text="@string/checkButton_text"
+        android:text="@string/contentButtonCheck"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ticket_number_editText"
+        app:layout_constraintTop_toBottomOf="@+id/etTicketNumber"
         app:layout_constraintVertical_bias="0.069" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
